hphp/hack/test/typecheck/lambda/variadics/variadics01.php.exp
File "variadics01.php", line 41, characters 26-30:
Was expecting an object but type is unknown (Typing[4297])
  File "variadics01.php", line 41, characters 18-19:
  It is unknown because a type could not be determined here
File "variadics01.php", line 49, characters 26-30:
Was expecting an object but type is unknown (Typing[4297])
  File "variadics01.php", line 49, characters 18-19:
  It is unknown because a type could not be determined here
